// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`edge case > includes highlight 1`] = `
{
  "code": "console.log('%cLog Message', 'color: orange');",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA",
    "names": [],
    "sources": [
      "/home/runner/src/main.js",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`svelte transform > svelte 1`] = `
{
  "code": "<script lang="ts">
  // xxxx
  const a: string = 'Hello'
  console.log("%c🚀 +page.svelte·4 ~ a%c🔦 http://localhost:3070#Li4vLi4vK3BhZ2Uuc3ZlbHRlOjQ6Mw==","padding:2px 5px; border-radius:3px 0 0 3px;margin-bottom:5px;color: #fff; background: #FF3E00","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n",a)
</script>

<h1>Welcome to SvelteKit</h1>
<p>
  Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation
</p>",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA;AACA;AACA;AACA,4RAAc;AACd;AACA;AACA;AACA;AACA;AACA",
    "names": [],
    "sources": [
      "+page.svelte",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`vanilla transform > tsx 1`] = `
{
  "code": ""use client";

  export default function Home() {
    console.log("%c🚀 page.tsx·4%c🔦 http://localhost:3070#Li4vLi4vcGFnZS50c3g6NDo1","padding:2px 5px; border-radius:3px 0 0 3px;margin-bottom:5px;color: #fff; background: #3178C6","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n","hello nextjs");
    function hello() {
      console.log("%c🚀 page.tsx·6%c🔦 http://localhost:3070#Li4vLi4vcGFnZS50c3g6Njo3","padding:2px 5px; border-radius:3px 0 0 3px;margin-bottom:5px;color: #fff; background: #3178C6","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n","hello nextjs");
    }
  
    return <main>page.tsx</main>;
  }
  ",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA;AACA;AACA;AACA,8QAAgB;AAChB;AACA,gRAAkB;AAClB;AACA;AACA;AACA;AACA",
    "names": [],
    "sources": [
      "page.tsx",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`vanilla transform > typescript 1`] = `
{
  "code": "const msg: string = "hello TypeScript"
  console.log("%c🚀 main.ts·2 ~ msg%c🔦 http://localhost:3070#Li4vLi4vbWFpbi50czoyOjM=","padding:2px 5px; border-radius:3px 0 0 3px;margin-bottom:5px;color: #fff; background: #3178C6","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n",msg)
  ",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA;AACA,iRAAc;AACd",
    "names": [],
    "sources": [
      "main.ts",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`vue transform > options 1`] = `
{
  "code": "<script>
  export default {
    data() {
      return {
        greeting: 'Hello World!'
      }
    },
    mounted() {
      const msg = "hello vue"
      console.log("%c🚀 App.vue·10 ~ msg%c🔦 http://localhost:3070#Li4vLi4vQXBwLnZ1ZToxMDo3","padding:2px 5px; border-radius:3px 0 0 3px;margin-bottom:5px;color: #fff; background: #4FC08D","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n",msg)
    }
  }
  </script>
  
  <template>
    <p class="greeting">{{ greeting }}</p>
  </template>
",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA,sRAAkB;AAClB;AACA;AACA;AACA;AACA;AACA;AACA;",
    "names": [],
    "sources": [
      "App.vue",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`vue transform > script setup 1`] = `
{
  "code": "<template>
  Hello World
</template>

<script setup lang="ts">
  const msg: string = "Hello World"
  console.log("%c🚀 App.vue·7 ~ msg%c🔦 http://localhost:3070#Li4vLi4vQXBwLnZ1ZTo3OjM=","padding:2px 5px; border-radius:3px 0 0 3px;margin-bottom:5px;color: #fff; background: #4FC08D","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n",msg)
</script>
",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA;AACA;AACA;AACA;AACA;AACA;AACA,iRAAc;AACd;",
    "names": [],
    "sources": [
      "App.vue",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;
